<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.auth.register.RegisterFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView"
                android:layout_width="251dp"
                android:layout_height="61dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/artboard2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/tv_user_img_prev"
                    android:layout_width="171dp"
                    android:layout_height="171dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    app:shapeAppearance="@style/circleImageView"
                    android:scaleType="centerCrop"
                    android:src="@drawable/user" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_picker_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_camera_alt_24"
                    android:background="@drawable/bg_rounded_white"
                    android:padding="12dp"
                    android:layout_gravity="bottom|end"/>

            </FrameLayout>

            <LinearLayout
                android:id="@+id/layout_signup_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_rounded_form"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_edt_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_marginHorizontal="38dp"
                    android:hint="@string/email_string"
                    app:boxBackgroundColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsregular"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_edt_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginHorizontal="38dp"
                    android:hint="@string/password_string"
                    app:boxBackgroundColor="@color/white"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsregular"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_edt_confirm_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginHorizontal="38dp"
                    android:hint="@string/confirm_password_string"
                    android:fontFamily="@font/poppinsregular"
                    app:boxBackgroundColor="@color/white"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_edt_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginHorizontal="38dp"
                    android:hint="@string/name_string"
                    android:fontFamily="@font/poppinsregular"
                    app:boxBackgroundColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_edt_phone"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginHorizontal="38dp"
                    android:hint="@string/email_phone"
                    android:fontFamily="@font/poppinsregular"
                    app:boxBackgroundColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_marginHorizontal="38dp"
                    android:fontFamily="@font/poppinsregular"
                    android:text="@string/gender_string" />

                <RadioGroup
                    android:id="@+id/rg_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="38dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rg_male"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsregular"
                        android:text="@string/male_string" />

                    <RadioButton
                        android:id="@+id/rg_female"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsregular"
                        android:text="@string/female_string" />

                </RadioGroup>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_signup"
                    android:layout_width="279dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:layout_marginHorizontal="38dp"
                    android:padding="15dp"
                    android:text="@string/signup_string"
                    android:textAllCaps="false"
                    android:fontFamily="@font/poppinsregular"
                    app:cornerRadius="7dp"
                    android:backgroundTint="@color/light_red"/>

                <LinearLayout
                    android:id="@+id/btn_to_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/bg_btn_to_login"
                    android:layout_marginTop="74dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="18dp"
                        android:text="@string/login_string"
                        android:fontFamily="@font/poppinsregular"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>