...
                android:fontFamily="@font/poppinsregular"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginHorizontal="38dp"
            android:layout_marginTop="66dp"
            android:layout_below="@+id/layout_edt_password"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/login_string"
            android:textAllCaps="false"
            android:backgroundTint="@color/light_red"
            app:cornerRadius="7dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_to_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_to_login"
            app:backgroundTint="@color/light_red"
            android:layout_alignParentBottom="true"
            android:text="@string/signup_string"
...
